--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,8 @@
 .footer {
   text-align: center;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5vh;
 }
