--- a/src/app/steam-login-button/steam-login-button.component.scss
+++ b/src/app/steam-login-button/steam-login-button.component.scss
@@ -19,9 +19,11 @@
 }
 
 .body-div {
-  height: 100vh; /* Set entire viewport height */
+  height: calc(100vh - 5vh);
+  box-sizing: border-box;
   display: flex; /* Flexbox for vertical centering */
-  flex-direction: column; /* Stack elements vertically */
+  flex-direction: column;
+  justify-content: center; /* Center elements horizontally */
   align-items: center; /* Center elements horizontally */
 }
 
